--- a/style2.css
+++ b/style2.css
@@ -538,3 +538,88 @@
     filter: invert(100%);
     -webkit-filter: invert(100%);
 }
+
+#PresalePopupCon{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+
+    z-index: 100000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(15px) brightness(0.6);
+}
+
+#PresalePopup {
+    width: 100vw;
+    height: 100vh;
+
+    z-index: 100000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translateY(-5%);
+
+}
+
+.PopImgCon {
+    position: relative;
+}
+
+.popTextCon {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin-top: 8rem;
+    display: flex;
+    padding-inline: 6rem;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+}
+
+.popTextCon>a {
+    margin-top: 2rem;
+    font-family: "Gelex";
+    font-size: 1.5rem;
+    line-height: 1.5rem;
+    letter-spacing: 0;
+
+    width: fit-content;
+
+    text-transform: capitalize;
+    text-align: center;
+    background: var(--yellow);
+    text-decoration: none;
+    color: black;
+    padding-inline: 1.5rem;
+    padding-block: 0.8rem;
+}
+
+.popTextCon>a:hover {
+    scale: 1.01;
+}
+.popNav {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popNav>img {
+    transform: translateY(-200%);
+}
+
+.hidden {
+    opacity: 0;
+}
+
+.popLine {
+    margin-top: 1.5rem;
+    margin-bottom: 4rem;
+}
