--- a/style2.css
+++ b/style2.css
@@ -551,6 +551,7 @@
     align-items: center;
     justify-content: center;
     backdrop-filter: blur(15px) brightness(0.6);
+    display: none;
 }
 
 #PresalePopup {
