--- a/global.css
+++ b/global.css
@@ -230,3 +230,16 @@ nav {
 #dreader:hover {
     scale: 1 !important;
 }
+
+.onMobile {
+    opacity: 0;
+}
+
+@media screen and (max-width: 700px) {
+    .onMobile {
+        opacity: 1;
+
+        top: -45%!important;
+    }
+
+}
