--- a/responsive.css
+++ b/responsive.css
@@ -506,7 +506,8 @@
     }
 
     .slide1 {
-        background-position-x: 30%;
+        background-position: center;
+        /* background-position-x: 50%; */
     }
 
     .slide2 {
@@ -514,11 +515,13 @@
     }
 
     .slide3 {
-        background-position-x: 38%;
+        background-position: center;
+        /* background-position-x: 38%; */
     }
 
     .slide4 {
-        background-position-x: 37%;
+        background-position: center;
+        /* background-position-x: 37%; */
     }
 
     .contextText>div {
