--- a/style2.css
+++ b/style2.css
@@ -25,10 +25,12 @@
     flex-direction: column;
     justify-content: flex-end;
     position: relative;
+    /* flex-grow: 1; */
+    flex-shrink: 1;
 }
 
 .catCard:hover {
-    width: 20rem;
+    width: 22rem;
     padding-left: 2rem;
     padding-right: 1rem;
 
